# glbasecode

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: bb.h  checkbox.cpp  checkbox.h  codeconv.cpp  codeconv.h  dialog.cpp  dialog.h  drawbox.cpp  drawbox.h  exec.cpp  exec.h  font.cpp  font.h  gl.cpp  gl.h  gl_def.h  gllib.h  imagebutton.cpp  imagebutton.h  key.h  label.cpp  label.h  layer.h  notification.cpp  notification.h  parts.h  primitive2d.cpp  primitive2d.h  pulldown.cpp  pulldown.h  scrollbox.cpp  scrollbox.h  sheet.cpp  sheet.h  slidebar.cpp  slidebar.h  text.cpp  text.h  text_def.h  textbox.cpp  (+5 more)
src/: codeconv.cpp  codeconv.h  font.cpp  font.h  gl.cpp  gl.h  gl_def.h  linmath.h  main.cpp  primitive2d.cpp  primitive2d.h  test.cpp  text.cpp  text.h  textbox.cpp  textbutton.cpp  textbutton.h
